crates/objectrecords-core/tests/compile_fail/external_state_impl_forbidden.stderr
error[E0277]: the trait bound `RogueState: objectrecords_core::sealed::Sealed` is not satisfied
  --> tests/compile_fail/external_state_impl_forbidden.rs:12:16
   |
12 | impl State for RogueState {}
   |                ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `objectrecords_core::sealed::Sealed` is not implemented for `RogueState`
  --> tests/compile_fail/external_state_impl_forbidden.rs:9:1
   |
 9 | struct RogueState;
   | ^^^^^^^^^^^^^^^^^
help: the following other types implement trait `objectrecords_core::sealed::Sealed`
  --> src/lib.rs
   |
   |     impl Sealed for super::Mutable {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Mutable`
   |     impl Sealed for super::Snapshot {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Snapshot`
   |     impl Sealed for super::Fixed {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Fixed`
note: required by a bound in `State`
  --> src/lib.rs
   |
   | pub trait State: sealed::Sealed {}
   |                  ^^^^^^^^^^^^^^ required by this bound in `State`
   = note: `State` is a "sealed trait", because to implement it you also need to implement `objectrecords_core::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             objectrecords_core::Mutable
             objectrecords_core::Snapshot
             objectrecords_core::Fixed
